app/styles/_user_dashboard.scss
.read_more{
	color: $sunshade;
}
/* ----Left Navbar CSS ----*/ 
.brand_name{
	color: $label-color;
	padding: $base_padding;
	display: inline-block;
	padding-left: 0px;
}
/* ----Right Navbar CSS ----*/ 
.patient_dash_right_nav{
	li{
		&:last-child{
				padding-right: 0px;
			}
		a{
			color: $label-color;
			border-radius: 0;
			font-weight: normal;
			&:hover{
				background-color: $table-bg;
				color: $pre-bg;
			}
			&:focus{
				background-color: $table-bg;
			}
			
		}

	}
}
/*----- Stats Chart CSS -----*/
.patient_wrapper{
	margin-top: 25px;
}
.stats_chart_section{
	.stats_header{
		border-bottom: $border_default;
		display: inline-block;
		width: 100%;

		h4{
			color: $iceberg;
			margin: 0px 5px 0px 0px;
			line-height: 25px;
			float: left;
			font-size: 17px;
		}
		.sub_txt{
			line-height: 27px;
			color: $sunshade;
		}
	}
} 
.stats_chart_container{
	clear: left;
    display: inline-block;
    margin: 25px 0;
    width: 100%;
	.col-3{
		width: 32.3333%;
		display: inline-block;
		float: left;
		position: relative;
		margin-right: 1%;
		background-image: url("../images/Color-HCP-Dashboard.png");
		background-size: 100% 100%;
		/*background:-webkit-gradient(linear, 0% 77%, 0% 2%, from(#7ca3dc), to(#fdfcfc));*/
		.chart_inner_icon{
			color: #ccc;
		    display: inline-block;
		    font-size: 45px;
		    height: 60px;
		    left: 37px;
		    position: absolute;
		    top: 32px;
		    width: 45px;
		}

	}
	.pie_chart{
		float: left;
		margin-left: 5px;
	}

}
.stats_chart_content{
	display: inline-block;
    margin: 30px 0 0 15px;
    &.score{
    	color: #41ae76;
    }
    &.hmr{
    	color: #8c6bb1;
    }
    &.missed{
    	color: #ef6548;
    }

    .percent{
    	font-size: 30px;
	    font-weight: bold;
	    line-height: 30px;
	    margin: 0;
	    float: left;
    }
    .descrip{
    	clear: left;
    }
    .patients_txt{
    	margin: 7px 0px 0px 10px;
    	display: inline-block;
    }
}
/* Notification Section CSS */
.dashboard_noti_section{
	margin-bottom: 20px;
}
.dashboard_noti_section{
	.header_noti{
		h4{
			margin: 0px 0px;
			color: $iceberg;
			margin: 0px 0px;
			line-height: 25px;
			font-size: 17px;
		}
	}
}
.notification_container{
	ul{
		padding: 0px;
		margin: 0;
		li{
			list-style-type: none;
			padding: 12px 0px;
			padding-left: 60px;
			border-bottom: $border_default;
			color: $gray;
			position: relative;
			&:hover{
				background-color: #F2EFEF;
			}
			.dsh_icon{
				border: $border_default;
			    border-radius: 50%;
			    color: #7DDBFA;
			    font-size: 23px;
			    height: 43px;
			    left: 3px;
			    line-height: 38px;
			    position: absolute;
			    top: 14px;
			    padding-left: 9px;
			    width: 43px;
			}
		}
		.read_more{
			text-decoration: underline;
			&:hover{
				color: $sunshade;
			}
		}
	}
}

/* -----BarChart Style ------*/
.bar_graph_header{
	border-bottom: $border_default;
	display: inline-block;
	width: 100%;
}
.left_header_barchart{
	ul{
		li{
			a{
				padding: 2px 0px;
				color: $gray-light;
				margin: 10px 20px 0px 0px;
				border-radius: 0px;
				border-bottom: solid 2px #fff;
				font-size: 16px;
				&:hover{
					background-color: transparent;
				}
				&:focus{
					background-color: transparent;
				}
				&.active{
					background-color: transparent;
					color: $iceberg;
					border-bottom: solid 2px $sunshade;
				}
			}
		}
	}
}
.right_header_barchart{
	ul{
		li{
			a{
				padding: 2px 0px;
				color: $gray-light;
				margin: 10px 0px 0px 20px;
				border-radius: 0px;
				border-bottom: solid 2px #fff;
				font-size: 14px;
				&:hover{
					background-color: transparent;
				}
				&:focus{
					background-color: transparent;
				}
				&.active{
					background-color: transparent;
					color: $iceberg;
				}
			}
		}
	}
}
.week_date_container{
	color: $gray-dark;
	.date{
		padding: 10px 10px;
	}
}

/* Dash Doard Note section css */
.patient_dashdoard_btns{
	.hillrom-btn{
		background-color: $iceberg;
		border: 0;
		border-bottom: solid 2px $blue-btn-border;
		color: $btn-primary-color;
		&:hover{
			background-color: $blue-btn-hover;
		}
	}
}
.add_note_container{
	display: block;
	border: $border_default;
	clear: left;
	float: left;
	width: 100%;
	min-height: 100px;
	margin: 30px 0px;
		.note_header{
			border-bottom: $border_default;
			display: inline-block;
			width: 100%;
			padding: 5px 0px;
		}
}
.note_header_left{
	.note{
		color: $iceberg;
		font-size: 14px;
	}
	.can_do{
		color: $gray-light;
		font-size: 12px;
	}
}
.note_header_right{
	.cross_icon{
		font-size: 14px;
		font-weight: lighter;
		color: $gray-light;
		text-decoration: none;
		padding: 0px 10px;
	}
}
.notes_content{
	.notes_row{
		border-bottom: $border_default;
		padding: 10px 0px;
	}
}
.edit_delete{
	.icon{
		display: inline-block;
		cursor: pointer;
		&.edit{
			margin-right: 10px;
		}
	}
}
.add_note_container{
	.patient_dashdoard_btns{
		display: inline-block;
		width: 100%;
		margin: 8px 0px 0px;
		padding: 0px 10px;
	}
	.view_all_btn{
		padding: 5px 5px;
		cursor: pointer;
		&:hover{
			color: $gray-dark;
		}
	}
}
.note_edit_container{
	padding: 15px 0px;
	.date_input{
		width: 100%;
	}
	.edit_delete{
		.save{
			background-color: $iceberg;
			border:0px;
			border-bottom: solid 2px $sunshade;
			margin-right: 15px;
			color: $btn-primary-color;
			&:hover{
				background-color: $sunshade;
			}
		}
	}
}

/* Custom check Style */
.wrapper_custom_check{
	margin: 20px 0 0;
	.custom_check_container{
		float: left;
		display: inline-block;
		margin-right: 40px;
		&:last-child{
			margin-right: 0px;
		}
		.check{
			opacity: 0;
			position: absolute;
			&:checked + .check_label{
				color: $gray-dark;
				&.missedTHRP_legend{
					&:after{
						background-color: #4e95c4;
						border: $btn-default-bg;
					}
				}
				&.pressure_legend{
					&:after{
						background-color: #ff9829;
						border: $btn-default-bg;
					}
				}
				&.frequency_legend{
					&:after{
						background-color: #34978f;
						border: $btn-default-bg;
					}
				}
				&.duration_legend{
					&:after{
						background-color: #4e95c4;
						border: $btn-default-bg;
					}
				}
				&:last-child{
					padding-right: 0px;
				}
			}
		}
		.check_label{
			position: relative;
			font-weight: normal;
			padding: 0px 0px;

			&:after{
				border: 1px solid $gray-light;
				background-color: transparent;
			    border-radius: 50%;
			    content: "";
			    cursor: pointer !important;
			    display: inline-block;
			    height: 12px;
			    left: -17px;
			    position: absolute;
			    top: 3px;
			    width: 12px;
			    border: solid 1px $forest-green;
			}
		}
	}
	.graph_check_error{
		display: block;
		clear: left;
		float: right;
	}
}


/* &.sky_blue{
				&:after{
					background-color: $iceberg;
					border: $btn-default-bg;
				}
			}
			&.sunshade{
				&:after{
					background-color: $sunshade;
					border: $btn-default-bg;
				}
			}
 */

/* Custom check Style END*/ 
 /* User Profile Setting */
.specific-user .user-header {
  margin-top: 30px;
  padding: 0;
	&--title {
    font-size: $font-size-base;
    font-weight: $font-weight-bold;
    color: $pickled-bluewood;
  }
}

.specific-user .user-header--desc {
	padding: 0;
	border-bottom: 1px solid $celeste;
	span {
		font-size: $font-size-small;
  	color: $celeste;
	}
}

.user-notification {
	padding: 20px 0;
	&--key {
		padding: 0;
		span {
			color: $nevada;
		}
	}

	&--icon {
		padding: 0;
		span {
			font-size: 30px;
			line-height: 21px;
		}
		span.inactive {
			color: $silver-approx;
		}
		span.active {
			color: $fruit-salad;
		}
	}
}
.note_delete_edit{
	margin-right: 5px;
}
.dashboard__manage-view--pagination{
	&.pagination_notes{
		margin: 20px 5px 15px !important;
		display: inline-block;
		float: right;

	}
	
}

